Fix the fabvicon and status

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -2,7 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/logo.png" type="image/png" />
+    <link rel="shortcut icon" href="%PUBLIC_URL%/logo.png" type="image/png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0, user-scalable=yes" />
     <meta name="theme-color" content="#1e40af" />
     <meta name="msapplication-TileColor" content="#1e40af" />
@@ -40,7 +42,6 @@
     <!-- Performance Optimization -->
     <link rel="dns-prefetch" href="//charism-backend.vercel.app" />
     <link rel="preload" href="%PUBLIC_URL%/logo.png" as="image" />
-    <link rel="preload" href="%PUBLIC_URL%/favicon.ico" as="image" />
     
     <title>CHARISM Community Link - University of Antique</title>
   </head>
