--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -12,14 +12,14 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="default" />
     
     <!-- SEO Meta Tags -->
-    <meta name="description" content="CHARISM Community Link - University of Antique's official community engagement platform for students, staff, and administrators." />
-    <meta name="keywords" content="CHARISM, University of Antique, community, events, student activities, staff management, university platform" />
+    <meta name="description" content="CHARISM  - University of the Assumption" />
+    <meta name="keywords" content="CHARISM, University of the Assumption, community, events, student activities, staff management, university platform" />
     <meta name="author" content="University of Antique" />
     <meta name="robots" content="index, follow" />
     
     <!-- Open Graph Meta Tags -->
-    <meta property="og:title" content="CHARISM Community Link - University of Antique" />
-    <meta property="og:description" content="Official community engagement platform for University of Antique students, staff, and administrators." />
+    <meta property="og:title" content="CHARISM  - University of the Assumption" />
+    <meta property="og:description" content="Official community engagement platform for University of the Assumption students, staff, and administrators." />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://charism.vercel.app" />
     <meta property="og:image" content="%PUBLIC_URL%/logo192.png" />
@@ -49,7 +49,7 @@
     <noscript>
       <div style="text-align: center; padding: 50px; font-family: Arial, sans-serif;">
         <h1>JavaScript Required</h1>
-        <p>CHARISM Community Link requires JavaScript to function properly. Please enable JavaScript in your browser and refresh the page.</p>
+        <p>CHARISM requires JavaScript to function properly. Please enable JavaScript in your browser and refresh the page.</p>
         <p>If you continue to have issues, please contact support.</p>
       </div>
     </noscript>
