--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -43,7 +43,7 @@
     <link rel="dns-prefetch" href="//charism-backend.vercel.app" />
     <link rel="preload" href="%PUBLIC_URL%/logo.png" as="image" />
     
-    <title>CHARISM Community Link - University of Antique</title>
+    <title>CHARISM - University of the Assumption</title>
   </head>
   <body>
     <noscript>
