participants and loading spin

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -27,8 +27,8 @@
     
     <!-- Twitter Meta Tags -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="CHARISM Community Link - University of Antique" />
-    <meta name="twitter:description" content="Official community engagement platform for University of Antique students, staff, and administrators." />
+    <meta name="twitter:title" content="CHARISM - University of the Assumption" />
+    <meta name="twitter:description" content="Official community engagement platform for University of the Assumption students, staff, and administrators." />
     <meta name="twitter:image" content="%PUBLIC_URL%/logo192.png" />
     
     <!-- Performance and Security -->
