fix chat page student5 and remove vercel

--- a/backend/test-health.html
+++ b/backend/test-health.html
@@ -57,7 +57,7 @@
         // Configuration
         const configs = {
             local: 'http://localhost:5000',
-            production: 'https://charism-server-ua-backend.vercel.app'
+            production: 'https://charism-api.onrender.com'
         };
         
         let currentConfig = 'production'; // Change to 'local' for local testing
