--- a/frontend/public/test-connection.html
+++ b/frontend/public/test-connection.html
@@ -26,7 +26,7 @@
     <div id="results"></div>
     
     <script>
-        const API_BASE = 'https://charism-server-ua-backend.vercel.app';
+        const API_BASE = 'https://charism-api.onrender.com';
         
         async function testEndpoint(endpoint, name) {
             const resultDiv = document.getElementById('results');
