--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -40,7 +40,7 @@
     <meta http-equiv="Referrer-Policy" content="strict-origin-when-cross-origin" />
     
     <!-- Performance Optimization -->
-    <link rel="dns-prefetch" href="//charism-api.onrender.com" />
+    <link rel="dns-prefetch" href="//charism-api-xtw9.onrender.com" />
     <link rel="preload" href="%PUBLIC_URL%/logo.png" as="image" />
     
     <title>CHARISM - University of the Assumption</title>
